# VideoAdSnip

./: .gitignore  README.md  pyproject.toml
src/videoadsnip/: __init__.py  audio_analyzer.py  cli.py  detector.py  processor.py  scene_detector.py
src/videoadsnip/web/: __init__.py
src/videoadsnip/web/templates/: index.html
tests/: test_detector.py
