[project]
name = "videoadsnip"
version = "0.1.0"
description = "Detect and remove ads from the beginning of videos"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8.0",
    "ffmpeg-python>=0.2.0",
    "numpy>=1.24.0",
    "rich>=13.0.0",
    "flask>=3.0.0",
    "scenedetect>=0.6.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
ml = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]

[project.scripts]
videoadsnip = "videoadsnip.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
